[gd_scene load_steps=5 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://Actors/MainCamera.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 52.5, 70.75 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( -0.149997, 0.150723 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 3 )

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 1, 0 )
current = true
limit_left = -100
limit_top = -100
limit_right = 2100
limit_bottom = 1300
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 15.0
script = ExtResource( 3 )

[node name="ShakeTimer" type="Timer" parent="MainCamera"]
one_shot = true

[connection signal="stomped" from="." to="MainCamera" method="_on_Player_stomped"]
[connection signal="timeout" from="MainCamera/ShakeTimer" to="MainCamera" method="_on_ShakeTimer_timeout"]
